--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,181 @@
-flask
-flask_socketio
+about-time==3.1.1
+alive-progress==2.4.1
+altgraph==0.17
+apiai==1.2.3
+appdirs==1.4.4
+async-generator==1.10
+attrs==21.2.0
+auto-py-to-exe @ file:///C:/Users/dhangar/downloads/auto_py_to_exe-2.13.0-py2.py3-none-any.whl
+bandwidth-sdk==11.0.0
+beautifulsoup4==4.10.0
+bidict==0.22.0
+blender==1.4
+bottle==0.12.19
+bottle-websocket==0.2.9
+buildozer==1.2.0
+CacheControl==0.12.6
+cachetools==4.2.2
+cairocffi==1.3.0
+CairoSVG==2.5.2
+certifi==2020.12.5
+cffi==1.15.0
+chardet==4.0.0
+click==8.0.1
+colorama==0.4.4
+coloredlogs==15.0.1
+comtypes==1.1.9
+configparser==5.2.0
+crayons==0.4.0
+cryptography==3.4.8
+cssselect2==0.5.0
+cycler==0.11.0
+Cython==0.29.24
+decorator==4.4.2
+defusedxml==0.7.1
+distlib==0.3.1
+docopt==0.6.2
+docutils==0.17.1
+Eel==0.14.0
+filelock==3.0.12
+Flask==2.0.1
+flask-ngrok==0.0.25
+Flask-SocketIO==5.3.1
+fonttools==4.33.3
+future==0.18.2
+gevent==21.12.0
+gevent-websocket==0.10.1
+GPUtil==1.4.0
+grapheme==0.6.0
+greenlet==1.1.2
+guiscrcpy==4.12.0
+gunicorn==20.1.0
+h11==0.12.0
+humanfriendly==10.0
+idna==2.10
+imageio==2.13.3
+importlib-metadata==4.0.1
+itsdangerous==2.0.1
+jaraco.context==4.1.1
+Jinja2==3.0.1
+Js2Py==0.71
+jsonpickle==0.9.6
+keyboard==0.13.5
+Kivy==2.1.0
+kivy-deps.angle==0.3.2
+kivy-deps.glew==0.3.1
+kivy-deps.gstreamer==0.3.3
+kivy-deps.sdl2==0.4.5
+Kivy-Garden==0.1.4
+kivymd==0.104.2
+kiwisolver==1.4.2
+lxml==4.6.3
+macholib==1.15.2
+MarkupSafe==2.0.1
+matplotlib==3.5.2
+more-itertools==8.12.0
+MouseInfo==0.1.3
+msgpack==1.0.2
+networkx==2.6.3
+numpy==1.21.4
+opencv-python==4.5.5.64
+outcome==1.1.0
+packaging==21.3
+Panda3D==1.10.9
+pandas==1.3.5
+patch==1.16
+pefile==2021.5.24
+pep517==0.6.0
+pexpect==4.8.0
+Pillow==8.4.0
+pipwin==0.5.1
+plivo==4.18.1
+pocketsphinx @ file:///C:/Users/dhangar/Downloads/pocketsphinx-0.1.15-cp310-cp310-win_amd64.whl
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-python-adb==0.3.0.dev0
+py2exe==0.10.4.0
+PyAudio @ file:///C:/Users/dhangar/pipwin/PyAudio-0.2.11-cp310-cp310-win_amd64.whl
+PyAutoGUI==0.9.52
+pybase64==1.2.0
+pycparser==2.20
+PyGetWindow==0.0.9
+Pygments==2.8.1
+pyinstaller @ https://github.com/pyinstaller/pyinstaller/tarball/develop
+pyinstaller-hooks-contrib==2021.1
+pyjsparser==2.7.1
+PyJWT==1.7.1
+PyMsgBox==1.0.9
+pyngrok==5.1.0
+pynput==1.6.8
+PyOpenGL==3.1.5
+pyOpenSSL==21.0.0
+pyparsing==3.0.6
+pyperclip==1.8.2
+pypiwin32==223
+PyPrind==2.11.3
+PyQt6==6.3.1
+PyQt6-Qt6==6.3.1
+PyQt6-sip==13.4.0
+pyreadline3==3.4.1
+PyRect==0.1.4
+PyScreeze==0.1.26
+pyserial==3.5
+PySide2==5.15.2
+PySide6==6.2.3
+pySmartDL==1.3.4
+python-dateutil==2.8.2
+python-engineio==4.3.4
+python-for-android==2020.6.2
+python-socketio==5.7.1
+pytoml==0.1.21
+pyttsx3==2.71
+PyTweening==1.0.3
+pytz==2021.1
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.2.0
+pywhatkit==5.2
+pywin32==302
+pywin32-ctypes==0.2.0
+PyYAML==6.0
+QT-PyQt-PySide-Custom-Widgets==0.2.6
+QtPy==2.0.1
+requests==2.25.1
+ruamel.std.zipfile==0.1.0
+scikit-image @ file:///C:/Users/dhangar/Downloads/scikit_image-0.19.0-cp310-cp310-win_amd64.whl
+scipy==1.7.3
+selenium==4.1.0
+sh==1.14.1
+shiboken2==5.15.2
+shiboken6==6.2.3
+six==1.15.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.1
+speak==0.1
+SpeechRecognition==3.8.1
+tifffile==2021.11.2
+tinycss2==1.1.1
+toml==0.10.2
+tqdm==4.64.0
+trio==0.19.0
+trio-websocket==0.9.2
+twilio==6.62.1
+tzdata==2021.5
+tzlocal==4.1
+urllib3==1.26.4
+vidstream==0.0.14
+virtualenv==20.4.3
+vosk==0.3.32
+webdriver-manager==3.5.2
+webdrivermanager==0.10.0
+webencodings==0.5.1
+Werkzeug==2.0.1
+wget==3.2
+whichcraft==0.6.1
+wikipedia==1.4.0
+wolframalpha==5.0.0
+wsproto==1.0.0
+xmltodict==0.12.0
+zipp==3.4.1
+zope.event==4.5.0
+zope.interface==5.4.0
